Atualizei o button, pois estava sem enviar as informações

--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
             <h1 class="black">Ganhe mais dinheiro</h1>
             <p class="gray">Digite aqui seu endereço de e-mail. Eu entrarei em<br>
             contato para fornecer um diagnóstico gratuito.</p>
-            <form action="https://api.sheetmonkey.io/form/ceXCDkSknk2aVSUZDt7ZWW" method="POST"></form>
+            <form action="https://api.sheetmonkey.io/form/ceXCDkSknk2aVSUZDt7ZWW" method="POST">
             <p><input placeholder="Seu e-mail"  required="required" type="text" name="contactEmail"></p>
             <button type="submit">Enviar</button>
+            </form>
         </div>
     </div>
     <div class="container" id="portifolioTitle">
